# cereal

./: .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  LICENSE  Makefile  Package.swift  README.md  _config.yml  about.html  appveyor.yml  archive_specialization.html  binary_archive.hpp  boost_serialize.cpp  cereal.hpp  cereal.pc.in  contributing.html  help.html  index.html  inheritance.html  json_archive.hpp  logo.xcf  other_topics.html  package.xml  params.json  performance.cpp  pimpl.html  pointers.html  polymorphism.html  portability_test.cpp  quickstart.html  renameincludes.sh  runme.sh  sandbox.cpp  sandbox_json.cpp  sandbox_rtti.cpp  sandbox_vs.cpp  sandbox_vs2012.cpp  serialization_archives.html  (+10 more)
.github/workflows/: ci-macos.yml  ci.yml
_includes/: about.markdown  archive_specialization.markdown  contributing.markdown  help.markdown  inheritance.markdown  main.markdown  other_topics.markdown  pimpl.markdown  pointers.markdown  polymorphism.markdown  quickstart.markdown  serialization_archives.markdown  serialization_functions.markdown  stl_support.markdown  thread_safety.markdown  transition_from_boost.markdown
_layouts/: default.html
assets/coverage/: index-sort-f.html  index-sort-l.html  index.html
assets/doxygen/: __site_2include__renamed_2cereal_2access_8hpp_source.html  __site_2include__renamed_2cereal_2archives_2binary_8hpp_source.html  __site_2include__renamed_2cereal_2archives_2json_8hpp_source.html  __site_2include__renamed_2cereal_2archives_2xml_8hpp_source.html  __site_2include__renamed_2cereal_2cereal_8hpp_source.html  __site_2include__renamed_2cereal_2details_2helpers_8hpp_source.html  __site_2include__renamed_2cereal_2details_2polymorphic__impl_8hpp_source.html  __site_2include__renamed_2cereal_2details_2static__object_8hpp_source.html  __site_2include__renamed_2cereal_2details_2traits_8hpp_source.html  __site_2include__renamed_2cereal_2details_2util_8hpp_source.html  __site_2include__renamed_2cereal_2types_2array_8hpp_source.html  __site_2include__renamed_2cereal_2types_2base__class_8hpp_source.html  __site_2include__renamed_2cereal_2types_2bitset_8hpp_source.html  __site_2include__renamed_2cereal_2types_2boost__variant_8hpp_source.html  __site_2include__renamed_2cereal_2types_2chrono_8hpp_source.html  __site_2include__renamed_2cereal_2types_2common_8hpp_source.html  __site_2include__renamed_2cereal_2types_2complex_8hpp_source.html  __site_2include__renamed_2cereal_2types_2deque_8hpp_source.html  __site_2include__renamed_2cereal_2types_2forward__list_8hpp_source.html  __site_2include__renamed_2cereal_2types_2list_8hpp_source.html  __site_2include__renamed_2cereal_2types_2map_8hpp_source.html  __site_2include__renamed_2cereal_2types_2memory_8hpp_source.html  __site_2include__renamed_2cereal_2types_2polymorphic_8hpp_source.html  __site_2include__renamed_2cereal_2types_2queue_8hpp_source.html  __site_2include__renamed_2cereal_2types_2set_8hpp_source.html  __site_2include__renamed_2cereal_2types_2stack_8hpp_source.html  __site_2include__renamed_2cereal_2types_2string_8hpp_source.html  __site_2include__renamed_2cereal_2types_2tuple_8hpp_source.html  __site_2include__renamed_2cereal_2types_2unordered__map_8hpp_source.html  __site_2include__renamed_2cereal_2types_2unordered__set_8hpp_source.html  __site_2include__renamed_2cereal_2types_2utility_8hpp_source.html  __site_2include__renamed_2cereal_2types_2vector_8hpp_source.html  access_8hpp.html  access_8hpp_source.html  adapters_8hpp.html  adapters_8hpp_source.html  annotated.html  array_8hpp.html  array_8hpp_source.html  atomic_8hpp.html  (+614 more)
binary_archive/: array.hpp  binary_archive.hpp  bitset.hpp  complex.hpp  deque.hpp  dequeue.hpp  forward_list.hpp  list.hpp  map.hpp  memory.hpp  queue.hpp  set.hpp  shared_ptr.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  vector.hpp
cmake/: CodeCoverage.cmake
details/: traits.hpp
doc/: CMakeLists.txt  DoxygenLayout.xml  doxygen.cfg  doxygen.in  footer.html  mainpage.dox
include/cereal/: access.hpp  base_class.hpp  cereal.hpp  macros.hpp  specialize.hpp  version.hpp
json_archive/: json_archive.hpp
sandbox/: CMakeLists.txt  performance.cpp  sandbox.cpp  sandbox_boostcompat.cpp  sandbox_json.cpp  sandbox_rtti.cpp  sandbox_vs.cpp
sandbox/sandbox_shared_lib/: CMakeLists.txt  base.cpp  base.hpp  derived.cpp  derived.hpp
scripts/: add_rapidjson_prefix.sh  appveyor.bat  updatecoverage.sh  updatedoc.in
unittests/: CMakeLists.txt  array.cpp  array.hpp  atomic.cpp  atomic.hpp  basic_string.cpp  basic_string.hpp  bitset.cpp  bitset.hpp  boost_optional.cpp  boost_variant.cpp  boost_variant.hpp  char.cpp  chrono.cpp  chrono.hpp  cmake-config-module.cmake  common.hpp  complex.cpp  complex.hpp  concatenation.cpp  custom_wrappers.cpp  defer.cpp  defer.hpp  deque.cpp  deque.hpp  doctest.h  forward_list.cpp  forward_list.hpp  list.cpp  list.hpp  load_construct.cpp  load_construct.hpp  make_nvp_member.cpp  map.cpp  map.hpp  memory.cpp  memory.hpp  memory_cycles.cpp  memory_cycles.hpp  multi_registration-1-helper.cpp  (+57 more)
unittests/boost/: CMakeLists.txt  boost_chrono.cpp  boost_variant.cpp  boost_variant.hpp  circular_buffer.cpp  common.hpp  compressed_pair.cpp  dynamic_bitset.cpp  filesystem.cpp  intrusive_ptr.cpp  optional.cpp  units.cpp
unittests/cpp17/: CMakeLists.txt  filesystem.cpp  filesystem.hpp  optional.cpp  optional.hpp  variant.cpp  variant.hpp
unittests/deserialize_only/: helper.cpp  test_class.cpp  test_class.hpp  test_suite.cpp
unittests/multi_registration/: archive2.hpp  common.cpp  common.hpp  helper1.cpp  helper2.cpp  test_suite1.cpp  test_suite2.cpp
vs2012/: sandbox_vs2012.cpp  vs2012.sln  vs2012.vcxproj  vs2012.vcxproj.filters
vs2013/: vs2013.sln
vs2013/performance/: performance.vcxproj  performance.vcxproj.filters
vs2013/sandbox/: sandbox.vcxproj  sandbox.vcxproj.filters
vs2013/sandbox_json/: sandbox_json.vcxproj  sandbox_json.vcxproj.filters
vs2013/sandbox_rtti/: sandbox_rtti.vcxproj  sandbox_rtti.vcxproj.filters
vs2015/: .gitignore  vs2015.sln
xcode/: readme.md
(+579 files in other folders)
